Fixed table spacing sorta

--- a/src/main/resources/static/static/css/demo.css
+++ b/src/main/resources/static/static/css/demo.css
@@ -9,6 +9,9 @@
     color: aqua;
     font-style: italic;
 }
+.table-spacing-manage{
+    text-align: left; width: 200px
+}
 .nav-position{
     position: relative;
 }
